# documentation /api/swagger.yaml
@@ -1,208 +1,199 @@
----
-swagger: "2.0"
+swagger: '2.0'
 info:
-  description: "This is a trivia game for a test of backend, hope you enjoy it. there\
-    \ is the URL and if you want to build the server you can do it cloning the  repository\
-    \ in the local machine and doing a \"docker-compose up\" and it will be listening\
-    \ at port 3000"
-  version: "1.0.5"
-  title: "Trivia Game"
+  description: 'This is a trivia game for a test of backend, hope you enjoy it.
+  there is the URL and if you want to build the server you can do it cloning the 
+  repository in the local machine and doing a "docker-compose up" and it will be listening at port 3000'
+  version: 1.0.5
+  title: Trivia Game
   contact:
-    email: "juanfbl9307@gmail.com"
-host: "18.223.156.190:3000"
-basePath: "/"
+    email: juanfbl9307@gmail.com
+host: 18.223.156.190:3000
+basePath: /
 tags:
-- name: "CRUD"
+  - name: CRUD
 schemes:
-- "http"
+  - http
 paths:
   /answer/create:
     post:
       tags:
-      - "answers"
-      summary: "Creates a new answer to a question."
-      operationId: "answerCreatePOST"
+      - answers
+      summary: Creates a new answer to a question.
       consumes:
-      - "application/json"
+        - application/json
       parameters:
-      - in: "body"
-        name: "create"
-        description: "create a new answer based in the id of a question."
-        required: false
-        schema:
-          type: "object"
-          properties:
-            usernameEmail:
-              type: "string"
-            questionId:
-              type: "string"
-            response:
-              type: "string"
+        - in: body
+          name: create
+          description: create a new answer based in the id of a question.
+          schema:
+            type: object
+            properties:
+              usernameEmail:
+                type: string
+              questionId:
+                type: string
+              response:
+                type: string
       responses:
-        "200":
-          description: "Question asnwered"
-      x-swagger-router-controller: "Answers"
+        '200':
+          description: Question asnwered
+          
   /answer/delete:
     post:
       tags:
-      - "answers"
-      summary: "Delete an answer of a question."
-      operationId: "answerDeletePOST"
+      - answers
+      summary: Delete an answer of a question.
       consumes:
-      - "application/json"
+        - application/json
       parameters:
-      - in: "body"
-        name: "delete"
-        description: "delete an existing answer based in the id of a question."
-        required: false
-        schema:
-          type: "object"
-          properties:
-            answerId:
-              type: "string"
+        - in: body
+          name: delete
+          description: delete an existing answer based in the id of a question.
+          schema:
+            type: object
+            properties:
+              answerId:
+                type: string
       responses:
-        "200":
-          description: "Answers deleted"
-      x-swagger-router-controller: "Answers"
+        '200':
+          description: Answers deleted
   /answer/update:
     post:
       tags:
-      - "answers"
-      summary: "Update an answer of a question."
-      operationId: "answerUpdatePOST"
+      - answers
+      summary: Update an answer of a question.
       consumes:
-      - "application/json"
+        - application/json
       parameters:
-      - in: "body"
-        name: "update"
-        description: "Update an existing answer based in the id of a question."
-        required: false
-        schema:
-          type: "object"
-          properties:
-            answerId:
-              type: "string"
-            response:
-              type: "string"
+        - in: body
+          name: update
+          description: Update an existing answer based in the id of a question.
+          schema:
+            type: object
+            properties:
+              answerId:
+                type: string
+              response:
+                type: string  
       responses:
-        "200":
-          description: "Answers updated"
-      x-swagger-router-controller: "Answers"
+        '200':
+          description: Answers updated
   /answer/list:
     get:
       tags:
-      - "answers"
-      summary: "List all answers"
-      operationId: "answerListGET"
-      parameters: []
+      - answers
+      summary: List all answers
       responses:
-        "200":
-          description: "Array of answers"
-      x-swagger-router-controller: "Answers"
+        '200':
+          description: Array of answers
   /quizz/delete:
     post:
       tags:
-      - "quizz"
-      summary: "Delete a quizz."
-      operationId: "quizzDeletePOST"
+      - quizz
+      summary: Delete a quizz.
       consumes:
-      - "application/json"
+        - application/json
       parameters:
-      - in: "body"
-        name: "delete"
-        description: "delete an existing quizz based in the name"
-        required: false
-        schema:
-          type: "object"
-          properties:
-            quizzName:
-              type: "string"
+        - in: body
+          name: delete
+          description: delete an existing quizz based in the name
+          schema:
+            type: object
+            properties:
+              quizzName:
+                type: string
       responses:
-        "200":
-          description: "Quizz ${name} deleted"
-      x-swagger-router-controller: "Quizz"
+        '200':
+          description: Quizz ${name} deleted
   /quizz/update:
     post:
       tags:
-      - "quizz"
-      summary: "Update a quizz."
-      operationId: "quizzUpdatePOST"
+      - quizz
+      summary: Update a quizz.
       consumes:
-      - "application/json"
+        - application/json
       parameters:
-      - in: "body"
-        name: "update"
-        description: "Update an existing quizz name based in the old name and generate\
-          \ new questions"
-        required: false
-        schema:
-          type: "object"
-          properties:
-            quizzName:
-              type: "string"
-            newQuizzName:
-              type: "string"
+        - in: body
+          name: update
+          description: Update an existing quizz name based in the old name and generate new questions
+          schema:
+            type: object
+            properties:
+              quizzName:
+                type: string
+              newQuizzName:
+                type: string
       responses:
-        "200":
-          description: "Quizz ${quizzName} updated by the name ${newQuizzName}"
-      x-swagger-router-controller: "Quizz"
+        '200':
+          description: Quizz ${quizzName} updated by the name ${newQuizzName} 
   /quizz/create:
     post:
       tags:
-      - "quizz"
-      summary: "Create a quizz."
-      operationId: "quizzCreatePOST"
+      - quizz
+      summary: Create a quizz.
       consumes:
-      - "application/json"
+        - application/json
       parameters:
-      - in: "body"
-        name: "create"
-        description: "Create a quizz with a name and randoms questions"
-        required: false
-        schema:
-          type: "object"
-          properties:
-            quizzName:
-              type: "string"
+        - in: body
+          name: create
+          description: Create a quizz with a name and randoms questions
+          schema:
+            type: object
+            properties:
+              quizzName:
+                type: string
       responses:
-        "200":
-          description: "Quizz ${quizzName} updated by the name ${newQuizzName}"
-      x-swagger-router-controller: "Quizz"
+        '200':
+          description: Quizz ${quizzName} updated by the name ${newQuizzName}
   /quizz/list:
     get:
       tags:
-      - "quizz"
-      summary: "List all quizz and questions."
-      operationId: "quizzListGET"
+      - quizz
+      summary: List all quizz and questions.
       consumes:
-      - "application/json"
-      parameters: []
+        - application/json
       responses:
-        "200":
-          description: "Array of quizz and questions"
-      x-swagger-router-controller: "Quizz"
+        '200':
+          description: Array of quizz and questions
   /quizz/results:
     get:
       tags:
-      - "quizz"
-      summary: "Show the results of user based in the quizz Id"
-      operationId: "quizzResultsGET"
+      - quizz
+      summary: Show the results of user based in the quizz Id
       consumes:
-      - "application/json"
+        - application/json
       parameters:
-      - in: "body"
-        name: "results"
-        description: "Results of username email with quizz id"
-        required: false
-        schema:
-          type: "object"
-          properties:
-            quizzId:
-              type: "string"
-            usernameEmail:
-              type: "string"
+        - in: body
+          name: results
+          description: Results of username email with quizz id
+          schema:
+            type: object
+            properties:
+              quizzId:
+                type: string
+              usernameEmail:
+                type: string
       responses:
-        "200":
-          description: "You have response ${(score / getResults.length) * 100}% of\
-            \ the questions well"
-      x-swagger-router-controller: "Quizz"
+        '200':
+          description: You have response ${(score / getResults.length) * 100}% of the questions well
+  /quizz/questions:
+    get:
+      tags:
+      - quizz
+      summary: Show the questions of a quizz based in Id
+      consumes:
+        - application/json
+      parameters:
+        - in: body
+          name: questions
+          description: List the id and questions from a quizzId
+          schema:
+            type: object
+            properties:
+              quizzId:
+                type: string
+      responses:
+        '200':
+          description: Array with id and question
+
+          
