# routes.js
@@ -8,6 +8,8 @@ routes.post('/answers/delete', AnswersController.deleteAnswer);
 routes.post('/answers/update', AnswersController.updateAnswers);
 routes.get('/answers/list', AnswersController.listAllAnswers);
 
+routes.get('/quizz/questions', QuizzController.getQuizzQuestions)
+
 routes.post('/quizz/delete', QuizzController.deleteQuizz);
 routes.post('/quizz/update', QuizzController.updateQuizz);
 routes.post('/quizz/create', QuizzController.create);
